added tutorial for quantum shift registers

--- a/tutorials/quantum_shift_registers.ipynb
+++ b/tutorials/quantum_shift_registers.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "\n",
     "Instead of writing code for applying the swaps and the controlled swaps, why not turn the entire swap operation buisness into one big   \n",
-    "`Quantum Shift Gate`. This can easily be done in Qiskit by using the `to_gate()` method. A demo for the same can be found [here!](https://www.youtube.com/watch?v=krhPpzkT_z4)\n",
+    "`quantum shift gate`. This can easily be done in Qiskit by using the `to_gate()` method. A demo for the same can be found [here!](https://www.youtube.com/watch?v=krhPpzkT_z4)\n",
     "\n",
     "### Having, discussed that, let's create out circuit for quantum shift registers!"
    ]
